# boxcraft

./: README.md  pyproject.toml
boxcraft/: __init__.py  _packer.py  _types.py  render.py
boxcraft/_algorithms/: __init__.py  force.py  glacier.py  shelf.py
boxcraft/testing/: __init__.py  _benchmark.py  _generators.py
datasets/: 2026-03.json  gps_trails_bounding_boxes.json  strava-activities-2012-2026.json
experiments/: balanced_comparison.py  dataset_distributions.py  fixed_width_comparison.py  fixed_width_strava_comparison.py  force_vs_glacier.py  glacier_vs_force.md  recursive_valley_fill.md  render_glacier.py  render_histogram.py  render_options.py  render_strava.py  shelf_vs_glacier.md  strava_histogram.py  uniform_vs_strava.py
tests/: conftest.py  test_benchmark.py  test_correctness.py
utils/: import_strava.py
